--- a/1. ruletaBackendBase/src/main/resources/application.properties
+++ b/1. ruletaBackendBase/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://192.168.18.10/RuletaPCA?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=SJ1006122767ht
+spring.datasource.url=jdbc:mysql://ip.ip.ip.ip/RuletaPCA?useSSL=false
+spring.datasource.username=usuario
+spring.datasource.password=contrasenia
 spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=20
